modify aside style

--- a/youth/children.html
+++ b/youth/children.html
@@ -150,7 +150,7 @@
 		<div id="main">
 	<!-- Content of the Page -->
 		<div id="content">
-			<h2>Children's Services</h2>
+			<h2>Children</h2>
 			<img class="right" src="../images/kidslaughing.jpg" height="171" width="230" alt="Kids laughing"/>
 
 			<ul>
@@ -173,7 +173,6 @@
 			<p>Children's Room: 617-349-4038</p>
 			</div>
 			<p>The Cambridge Public Library's new <strong>Children's Room</strong> on the top floor of the Main Library always has something happening. We offer music and story programs for infants, toddlers, and preschoolers, activities and book discussions groups for school-aged children, special events for families, and programs for parents and caregivers. We do outreach to local Head Starts, preschools, elementary schools, summer camps, parks, city festivals and more.</p>
-			<p> Check the <strong>Events</strong> box on the left to find out what's happening in the Children's Room. You can also check <strong>Kids Pages</strong> below for Events and Programs. </p>
 			<p><strong>Be sure to get a library card!</strong> We provide an extensive children's collection including books, magazines, music, movies, audio books, games, materials in other languages, resources for parents and child care providers, reference books, databases, and computer stations specifically for children's use. </p>
 
 		</div>
