update meeting rooms with link to real application

--- a/how/meetingroom.html
+++ b/how/meetingroom.html
@@ -152,21 +152,22 @@
 	<!-- Content of the Page -->
 		<div id="content">
 			<img class="right" src="../images/meetingroom.jpg" alt="photo of book group meeting"/>
-			<h2>Meeting Rooms</h2>
+			<h2>How do I book a meeting room?</h2>
 			<h3>Main Library</h3>
-			<p>The Main Library has a number of meeting rooms available 			                for use by Cambridge-based not-for-profit community groups.The meeting 			rooms and capacity are:</p>
-			<br>Beech Room: capacity 16 </br>
-			<br>Rindge Room: capacity 12 </br>
-			<br>Community Room: capacity 100 </br>
-			<br>Lecture Hall: capacity 230 </br>
-			<br>Fuller Room: capacity 6 </br>
-			<br>Computer classroom: capacity 20 </br>
-			<p>All meeting rooms are subject to availability with the understanding that library programs have priority. If interested in booking a meeting room, please fill out a meeting room application and submit this to the Main Library no more than two months in advance.You can also fax the application to (617)349-4028.</p>
-			<p>For complete information, please see our policy and application.You can also call the Library Administration Office at (617) 349-4032 with questions.</p>
-			<p><a href="#">Main Library Meeting Rooms Policy and Application</a></p>
+			<h4><a href="http://www.cambridgema.gov/cpl/Services/~/media/Files/cambridgepubliclibrary/eventsandprograms/Meeting%20Room%20Policy%20Main%20Library%20June%2029%20-%20Final%20(2).ashx">Meeting Rooms Policy and Application Form</a></h4>
+			<p>The Main Library meeting rooms are available for use by Cambridge-based not-for-profit community groups.</p>
+			<ul>
+			<li>Beech Room: capacity 16 </li>
+			<li>Rindge Room: capacity 12 </li>
+			<li>Community Room: capacity 100 </li>
+			<li>Lecture Hall: capacity 230 </li>
+			<li>Fuller Room: capacity 6 </li>
+			<li>Computer classroom: capacity 20 </li>
+			</ul>
+			<p>All meeting rooms are subject to availability with the understanding that library programs have priority. If interested in booking a meeting room, please fill out a <a href="http://www.cambridgema.gov/cpl/Services/~/media/Files/cambridgepubliclibrary/eventsandprograms/Meeting%20Room%20Policy%20Main%20Library%20June%2029%20-%20Final%20(2).ashx">meeting room application</a> and submit it to the Main Library no more than two months in advance.You can also fax the application to (617)349-4028.</p>
 			<h3>Branch Libraries</h3>
-			<p>Central Square Branch: Lewis Room and Rotary Conference Room are not available while the branch is closed. </p>
-			<p>The O'Neill Branch Meeting Room can be booked for two hours and can accomodate 6 - 8 people maximum. For more information, call (617) 349-4023.	
+			<p><strong>The Central Square Branch</strong> Lewis Room and Rotary Conference Room are not available while the branch is closed. </p>
+			<p><strong>The O'Neill Branch</strong> Meeting Room can be booked for two hours and can accomodate 6 - 8 people maximum. For more information, call (617) 349-4023.	
 				
 		</div>
 			<!-- End Content -->
