--- a/about/collections.html
+++ b/about/collections.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN" "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
+	<base href="file:///Users/lgaudre/Sites/CPL/">
 	<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 	<meta name="description" content="The official website for the Cambridge Public Library in Cambridge, MA. On the site you'll find information about the library and its branches, programs and events. You can also access the catalog, articles, and other downloadable materials.">
 	<meta name="keywords" content="Library, Libary, Liberry, Libry, Libarary, Public, CPL, Cambridge, Caimbridge, Caimbrige, Cambrige, Massachusetts, MA, Mass, Minuteman, Broadway, Boudreau, Collins, Central Square, O’Neill, O’Connell, Valente, Books, Movies, DVD, DVDs, Book Club, Storytime">
-	<link rel="stylesheet" href="../css/style.css" type="text/css" media="screen" charset="utf-8" />
+	<link rel="stylesheet" href="css/style.css" type="text/css" media="screen" charset="utf-8" />
 	<title>About Us: Collections - Cambridge Public Library</title>
 </head>
 <body id="about">
@@ -12,10 +13,10 @@
 	<div id="header">
 	<!-- Logo Section -->
 		<div id="logo">
-			<a href="#">
-			<img src="../images/logo.gif" width="300" height="64" alt="Cambridge Public Library, Cambridge, MA" />
+			<a href="">
+			<img src="images/logo.gif" width="300" height="64" alt="Cambridge Public Library, Cambridge, MA" />
 			</a>
-			<h1><a href="#">Cambridge Public Library</a></h1>
+			<h1><a href="">Cambridge Public Library</a></h1>
 		</div>
 		<!-- End Logo Section -->
 		<!-- Functional Links Section (Ask a Librarian, Search) -->
@@ -43,11 +44,11 @@
 
 		<div id="menu">
 			<ul>
-				<li class="home"><a href="#">Home</a></li>
-				<li class="how"><a href="#">How Do I?</a>
+				<li class="home"><a href="">Home</a></li>
+				<li class="how"><a href="how/">How Do I?</a>
 					<ul>
 						<li><a href="#">Access online library resources from home?</a></li>
-						<li><a href="#">Book a meeting room?</a></li>
+						<li><a href="how/meetingroom">Book a meeting room?</a></li>
 						<li><a href="#">Donate materials?</a></li>
 						<li><a href="#">Get a Library Card?</a></li>
 						<li><a href="#">Get a museum pass?</a></li>
@@ -157,7 +158,7 @@
 	<!-- Content of the Page -->
 		<div id="content">
 			<h2>Collections</h2>
-			<img class="right" src="../images/collections.jpg" width="230" height="173" alt="photo of reading room"/>
+			<img class="right" src="images/collections.jpg" width="230" height="173" alt="photo of reading room"/>
 			<p>The Cambridge Public Library's collections are diverse in scope and serve to educate, stimulate, and inform the user while also reflecting the individual character of the Cambridge community. Materials are available in many different forms besides print, such as audio, downloadable ebooks, music, film, large print, online resources, magazines and newspapers. </p>
 			<h3>Special Collections</h3>
 			<p> <strong>The Black Studies Collection</strong> is housed at the Central Square Branch Library and circulates popular and academic materials. The collection consists of about 750 works by African-American and African authors. Content includes books on the history of Blacks in the South, Civil Rights, works by Harlem Renaissance writers, as well as sports, biographies, histories, poetry, and fiction. </p>
