--- a/city/index.html
+++ b/city/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN" "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
+	<base href="file:///Users/lgaudre/Sites/CPL/">
 	<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 	<meta name="description" content="The official website for the Cambridge Public Library in Cambridge, MA. On the site you'll find information about the library and its branches, programs and events. You can also access the catalog, articles, and other downloadable materials." />
 	<meta name="keywords" content="Library, Libary, Liberry, Libry, Libarary, Public, CPL, Cambridge, Caimbridge, Caimbrige, Cambrige, Massachusetts, MA, Mass, Minuteman, Broadway, Boudreau, Collins, Central Square, O’Neill, O’Connell, Valente, Books, Movies, DVD, DVDs, Book Club, Storytime" />
-	<link rel="stylesheet" href="../css/style.css" type="text/css" media="screen" charset="utf-8" />
+	<link rel="stylesheet" href="css/style.css" type="text/css" media="screen" charset="utf-8" />
 	<title>Cambridge City Services - Cambridge Public Library</title>
 </head>
 <body id="city">
@@ -12,10 +13,10 @@
 	<div id="header">
 	<!-- Logo Section -->
 		<div id="logo">
-			<a href="#">
-			<img src="../images/logo.gif" width="300" height="64" alt="Cambridge Public Library, Cambridge, MA" />
+			<a href="">
+			<img src="images/logo.gif" width="300" height="64" alt="Cambridge Public Library, Cambridge, MA" />
 			</a>
-			<h1><a href="#">Cambridge Public Library</a></h1>
+			<h1><a href="">Cambridge Public Library</a></h1>
 		</div>
 		<!-- End Logo Section -->
 		<!-- Functional Links Section (Ask a Librarian, Search) -->
@@ -42,11 +43,11 @@
 		<!-- Main Navigation Menu -->
 		<div id="menu">
 			<ul>
-				<li class="home"><a href="#">Home</a></li>
-				<li class="how"><a href="#">How Do I?</a>
+				<li class="home"><a href="">Home</a></li>
+				<li class="how"><a href="how/">How Do I?</a>
 					<ul>
 						<li><a href="#">Access online library resources from home?</a></li>
-						<li><a href="#">Book a meeting room?</a></li>
+						<li><a href="how/meetingroom">Book a meeting room?</a></li>
 						<li><a href="#">Donate materials?</a></li>
 						<li><a href="#">Get a Library Card?</a></li>
 						<li><a href="#">Get a museum pass?</a></li>
@@ -155,7 +156,7 @@
 	<!-- Content of the Page -->
 		<div id="content">
 			<h2>Cambridge City Services</h2>
-			<img alt="Cambridge City Hall" src="../images/cityhall.jpg" class="right" width="300" height="225" />
+			<img alt="Cambridge City Hall" src="images/cityhall.jpg" class="right" width="300" height="225" />
 			<h3> <a href="http://www.cambridgema.gov/~/media/Files/publicinformationoffice/thecambridgelifemagazineandcityresourceguide/CambridgeLife_2010_2011.ashx"> Cambridge Life</a></h3>
 			<p>A city resource guide provides a comprehensive reference of city organizations, political structure and municipal services.  A quick overview of city ordinances, contact names and phone numbers, and city cultural events.</p>
 			<h3> <a href="http://www.cambridgema.gov/">City of Cambridge</a></h3>
