--- a/feedback.html
+++ b/feedback.html
@@ -1,4 +1,5 @@
 <head>
+	<base href="file:///Users/lgaudre/Sites/CPL/">
 	<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 	<meta name="description" content="The official website for the Cambridge Public Library in Cambridge, MA. On the site you'll find information about the library and its branches, programs and events. You can also access the catalog, articles, and other downloadable materials." />
 	<meta name="keywords" content="Library, Libary, Liberry, Libry, Libarary, Public, CPL, Cambridge, Caimbridge, Caimbrige, Cambrige, Massachusetts, MA, Mass, Minuteman, Broadway, Boudreau, Collins, Central Square, O'Neill, O'Connell, Valente, Books, Movies, DVD, DVDs, Book Club, Storytime" />
@@ -10,10 +11,10 @@
 	<div id="header">
 	<!-- Logo Section -->
 		<div id="logo">
-			<a href="#">
+			<a href="">
 			<img src="images/logo.gif" width="300" height="64" alt="Cambridge Public Library, Cambridge, MA" />
 			</a>
-			<h1><a href="#">Cambridge Public Library</a></h1>
+			<h1><a href="">Cambridge Public Library</a></h1>
 		</div>
 		<!-- End Logo Section -->
 		<!-- Functional Links Section (Ask a Librarian, Search) -->
@@ -40,11 +41,11 @@
 		<!-- Main Navigation Menu -->
 		<div id="menu">
 			<ul>
-				<li class="home"><a href="#">Home</a></li>
-				<li class="how"><a href="#">How Do I?</a>
+				<li class="home"><a href="">Home</a></li>
+				<li class="how"><a href="how/">How Do I?</a>
 					<ul>
 						<li><a href="#">Access online library resources from home?</a></li>
-						<li><a href="#">Book a meeting room?</a></li>
+						<li><a href="how/meetingroom">Book a meeting room?</a></li>
 						<li><a href="#">Donate materials?</a></li>
 						<li><a href="#">Get a Library Card?</a></li>
 						<li><a href="#">Get a museum pass?</a></li>
