--- a/how/meetingroom.html
+++ b/how/meetingroom.html
@@ -1,10 +1,11 @@
 ﻿<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN" "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
+	<base href="file:///Users/lgaudre/Sites/CPL/">
 	<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 	<meta name="description" content="The official website for the Cambridge Public Library in Cambridge, MA. On the site you'll find information about the library and its branches, programs and events. You can also access the catalog, articles, and other downloadable materials." />
 	<meta name="keywords" content="Library, Libary, Liberry, Libry, Libarary, Public, CPL, Cambridge, Caimbridge, Caimbrige, Cambrige, Massachusetts, MA, Mass, Minuteman, Broadway, Boudreau, Collins, Central Square, O’Neill, O’Connell, Valente, Books, Movies, DVD, DVDs, Book Club, Storytime" />
-	<link rel="stylesheet" href="../css/style.css" type="text/css" media="screen" charset="utf-8" />
+	<link rel="stylesheet" href="css/style.css" type="text/css" media="screen" charset="utf-8" />
 	<title>How Do I Book a Meeting Room? - Cambridge Public Library</title>
 </head>
 <body id="how">
@@ -12,10 +13,10 @@
 	<div id="header">
 	<!-- Logo Section -->
 		<div id="logo">
-			<a href="#">
-			<img src="../images/logo.gif" width="300" height="64" alt="Cambridge Public Library, Cambridge, MA" />
+			<a href="">
+			<img src="images/logo.gif" width="300" height="64" alt="Cambridge Public Library, Cambridge, MA" />
 			</a>
-			<h1><a href="#">Cambridge Public Library</a></h1>
+			<h1><a href="">Cambridge Public Library</a></h1>
 		</div>
 		<!-- End Logo Section -->
 		<!-- Functional Links Section (Ask a Librarian, Search) -->
@@ -42,11 +43,11 @@
 		<!-- Main Navigation Menu -->
 		<div id="menu">
 			<ul>
-				<li class="home"><a href="#">Home</a></li>
-				<li class="how"><a href="#">How Do I?</a>
+				<li class="home"><a href="">Home</a></li>
+				<li class="how"><a href="how/">How Do I?</a>
 					<ul>
 						<li><a href="#">Access online library resources from home?</a></li>
-						<li><a href="#">Book a meeting room?</a></li>
+						<li><a href="how/meetingroom">Book a meeting room?</a></li>
 						<li><a href="#">Donate materials?</a></li>
 						<li><a href="#">Get a Library Card?</a></li>
 						<li><a href="#">Get a museum pass?</a></li>
@@ -155,7 +156,7 @@
 		<div id="main">
 	<!-- Content of the Page -->
 		<div id="content">
-			<img class="right" src="../images/meetingroom.jpg" alt="photo of book group meeting"/>
+			<img class="right" src="images/meetingroom.jpg" alt="photo of book group meeting"/>
 			<h2>How do I book a meeting room?</h2>
 			<h3>Main Library</h3>
 			<h4><a href="http://www.cambridgema.gov/cpl/Services/~/media/Files/cambridgepubliclibrary/eventsandprograms/Meeting%20Room%20Policy%20Main%20Library%20June%2029%20-%20Final%20(2).ashx">Meeting Rooms Policy and Application Form</a></h4>
