--- a/feedback.html
+++ b/feedback.html
@@ -1,5 +1,5 @@
 <head>
-	<base href="file:///Users/lgaudre/Sites/CPL/">
+	<base href="http://www.infosoph.org/CPL/">
 	<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 	<meta name="description" content="The official website for the Cambridge Public Library in Cambridge, MA. On the site you'll find information about the library and its branches, programs and events. You can also access the catalog, articles, and other downloadable materials." />
 	<meta name="keywords" content="Library, Libary, Liberry, Libry, Libarary, Public, CPL, Cambridge, Caimbridge, Caimbrige, Cambrige, Massachusetts, MA, Mass, Minuteman, Broadway, Boudreau, Collins, Central Square, O'Neill, O'Connell, Valente, Books, Movies, DVD, DVDs, Book Club, Storytime" />
