update links to children

--- a/how/index.html
+++ b/how/index.html
@@ -66,7 +66,7 @@
 				</li>
 				<li class="youth"><a href="#">Youth</a>
 					<ul>
-						<li><a href="#">Children</a></li>
+						<li><a href="youth/children">Children</a></li>
 						<li><a href="#">Teens</a></li>
 					</ul>
 				</li>
@@ -159,7 +159,7 @@
 			<h2>How Do I?</h2>
 			<h3><a href="#">Access online library resources from home?</a></h3> 
 			<p>Our Minuteman Library Network Catalog is accessible from home computers.</p>
-			<h3><a href="#">Book a meeting room?</a></h3> 
+			<h3><a href="how/meetingroom">Book a meeting room?</a></h3> 
 			<p>The Cambridge Public Library has meeting room space for community organizations in its Main Library and the O'Neill Branch Library.</p>
 			<h3><a href="#">Donate materials?</a></h3> 
 			<p>We do accept some donations. Please check our policy.</p>
