update links to city services page

--- a/feedback.html
+++ b/feedback.html
@@ -68,7 +68,7 @@
 						<li><a href="#">Teens</a></li>
 					</ul>
 				</li>
-				<li class="city"><a href="#">Cambridge City Services</a>
+				<li class="city"><a href="city">Cambridge City Services</a>
 				<ul>
 					<li><a href="#">Resource Guide</a></li>
 					<li><a href="#">City Website</a></li>
