update links to collections page

--- a/feedback.html
+++ b/feedback.html
@@ -81,7 +81,7 @@
 				</li>
 				<li class="about"><a href="#">About Us</a>
 					<ul>
-						<li><a href="#">Collections</a></li>
+						<li><a href="about/collections">Collections</a></li>
 						<li><a href="#">Friends</a></li>
 						<li><a href="#">Trustees</a></li>
 					</ul>	
