--- a/about/collections.html
+++ b/about/collections.html
@@ -106,7 +106,7 @@
 	<div id="sidebar">
 	<!-- Events Section -->
 		<div id="events">
-		<h2>Events</h2>
+		<h2><a href="events">Events</a></h2>
 		<ul>
 			<li>
 				<h3>Saturday November 13th</h3>
