--- a/about/collections.html
+++ b/about/collections.html
@@ -127,7 +127,7 @@
 					<p class="time">10:00am-11:00am</p>
 				</li>
 				<li>
-					<p><a href="#">More...</a></p>
+					<p><a href="events">More...</a></p>
 				</li>
 			</ul>
 			</li>
@@ -136,7 +136,7 @@
 	<!-- End Events Section -->
 	<!-- News Section -->
 	<div id="news">
-	<h2>News</h2>
+	<h2><a href="news">News</a></h2>
 		<ul>
 			<li>
 				<h3><a href="#">Closed on Veterans' Day</a></h3>
@@ -147,7 +147,7 @@
                           <p>We regret to advise our users, but the Central Square Branch will be closed longer than anticipated...</p>
 			</li>
 			<li>
-				<p><a href="#">More...</a></p>
+				<p><a href="news">More...</a></p>
 			</li>
 		</ul>
 	</div>
