--- a/feedback.html
+++ b/feedback.html
@@ -123,7 +123,7 @@
 					<p class="time">10:00am-11:00am</p>
 				</li>
 				<li>
-					<p><a href="#">More...</a></p>
+					<p><a href="events">More...</a></p>
 				</li>
 			</ul>
 			</li>
@@ -132,7 +132,7 @@
 	<!-- End Events Section -->
 	<!-- News Section -->
 	<div id="news">
-	<h2>News</h2>
+	<h2><a href="news">News</a></h2>
 		<ul>
 			<li>
 				<h3><a href="#">Closed on Veterans' Day</a></h3>
@@ -143,7 +143,7 @@
                           <p>We regret to advise our users, but the Central Square Branch will be closed longer than anticipated...</p>
 			</li>
 			<li>
-				<p><a href="#">More...</a></p>
+				<p><a href="news">More...</a></p>
 			</li>
 		</ul>
 	</div>
