update links for feedback

--- a/find/books.html
+++ b/find/books.html
@@ -142,8 +142,8 @@
 				<p>All library branches will be closed on Thursday November 11th in observance of Veterans' Day.</p>
 			</li>
 			<li class="last">
-                          <h3><a href="/news/2010-10-07-branch-closed.html">Central Square Branch Closed</a></h3>
-                          <p>We regret to advise our users, but the Central Square Branch will be closed longer than anticipated...</p>
+                       <h3><a href="#">Central Square Branch Closed</a></h3>
+                       <p>We regret to advise our users, but the Central Square Branch will be closed longer than anticipated...</p>
 			</li>
 			<li>
 				<p><a href="news">More...</a></p>
