--- a/index.html
+++ b/index.html
@@ -133,8 +133,8 @@
 				<p>All library branches will be closed on Thursday November 11th in observance of Veterans' Day.</p>
 			</li>
 			<li class="last">
-                          <h3><a href="/news/2010-10-07-branch-closed.html">Central Square Branch Closed</a></h3>
-                          <p>We regret to advise our users, but the Central Square Branch will be closed longer than anticipated...</p>
+                       <h3><a href="#">Central Square Branch Closed</a></h3>
+                       <p>We regret to advise our users, but the Central Square Branch will be closed longer than anticipated...</p>
 			</li>
 			<li>
 				<p><a href="news">More...</a></p>
@@ -147,9 +147,9 @@
 		<div id="main">
 	<!-- Content of the Page -->
 		<div id="content">
-			<a href="#"><img src="images/howdoi.jpg" width="250" height="258" class="left" alt="How Do I?" /></a>
+			<a href="how"><img src="images/howdoi.jpg" width="250" height="258" class="left" alt="How Do I?" /></a>
 			<a href="#"><img src="images/find.jpg" width="349" height="231" class="right" alt="Find" /></a>
-			<a href="#"><img src="images/city.jpg" width="349" height="111" class="right" alt="Cambridge City Services" /></a>
+			<a href="city"><img src="images/city.jpg" width="349" height="111" class="right" alt="Cambridge City Services" /></a>
 			<a href="#"><img src="images/youth.jpg" width="250" height="194"  class="left youth" alt="Youth" /></a>
 			<a href="#"><img src="images/about.jpg" width="349" height="109" class="right" alt="About Us" /></a>						
 		</div>
@@ -165,7 +165,7 @@
 				<p id="flickr"><a href="http://www.flickr.com/cambridgepl">Flickr</a></p>
 			</div>
 			<div id="feedback">
-				<h2><a href="#">Feedback</a></h2>
+				<h2><a href="feedback">Feedback</a></h2>
 			</div>
 		</div>
 		<!-- End Footer -->
