--- a/city/index.html
+++ b/city/index.html
@@ -141,8 +141,8 @@
 				<p>All library branches will be closed on Thursday November 11th in observance of Veterans' Day.</p>
 			</li>
 			<li class="last">
-                          <h3><a href="/news/2010-10-07-branch-closed.html">Central Square Branch Closed</a></h3>
-                          <p>We regret to advise our users, but the Central Square Branch will be closed longer than anticipated...</p>
+                       <h3><a href="#">Central Square Branch Closed</a></h3>
+                       <p>We regret to advise our users, but the Central Square Branch will be closed longer than anticipated...</p>
 			</li>
 			<li>
 				<p><a href="news">More...</a></p>
@@ -184,7 +184,7 @@
 				<p id="flickr"><a href="http://www.flickr.com/cambridgepl">Flickr</a></p>
 			</div>
 			<div id="feedback">
-				<h2><a href="#">Feedback</a></h2>
+				<h2><a href="feedback">Feedback</a></h2>
 			</div>
 		</div>
 		<!-- End Footer -->
