fix errant link to home

--- a/youth/children.html
+++ b/youth/children.html
@@ -43,7 +43,7 @@
 		<!-- Main Navigation Menu -->
 		<div id="menu">
 			<ul>
-				<li class="home"><a href="/">Home</a></li>
+				<li class="home"><a href="">Home</a></li>
 				<li class="how"><a href="how/">How Do I?</a>
 					<ul>
 						<li><a href="#">Access online library resources from home?</a></li>
