fix social links

--- a/how/index.html
+++ b/how/index.html
@@ -184,9 +184,9 @@
 		<div id="footer">
 			<div id="follow">
 				<h2>Follow</h2>
-				<p id="facebook"><a href="http://www.facebook.com/cambridgepl">Facebook</a></p>
+				<p id="facebook"><a href="http://www.facebook.com/pages/Cambridge-Public-Library/107404242622229">Facebook</a></p>
 				<p id="twitter"><a href="http://www.twitter.com/cambridgepl">Twitter</a></p>
-				<p id="flickr"><a href="http://www.flickr.com/cambridgepl">Flickr</a></p>
+				<p id="flickr"><a href="http://www.flickr.com/photos/cambridgepubliclibrary/sets/">Flickr</a></p>
 			</div>
 			<div id="feedback">
 				<h2><a href="feedback">Feedback</a></h2>
