fix broken links for feedback form

--- a/feedback.html
+++ b/feedback.html
@@ -183,7 +183,7 @@
 						<p id="flickr"><a href="http://www.flickr.com/photos/cambridgepubliclibrary/sets/">Flickr</a></p>
 					</div>
 					<div id="feedback">
-						<h2><a href="#">Feedback</a></h2>
+						<h2><a href="feedback">Feedback</a></h2>
 					</div>
 				</div>
 				<!-- End Footer -->
