--- a/find/books.html
+++ b/find/books.html
@@ -163,7 +163,7 @@
 	<input type="submit" value="Go" />
 </form>		
 <img class="right" height="173" width="230" alt="CPL Reading Room" src="images/readingroom.jpg">	
-<h3 class="clear">Books</h3>
+<h3 class="clear-left">Books</h3>
 Your library card is the key to the resources of Cambridge's Main Library and its six branches. It is also your membership into the <a href="http://library.minlib.net/search/">Minuteman Library Network </a>(MLN). All MLN library members allow you to borrow their materials on your Cambridge library card. The Cambridge Public Library honors all library cards issued by other MLN libraries. 		
 
 <h3>E-Books</h3>
