fix minuteman link and br tags

--- a/events/index.html
+++ b/events/index.html
@@ -179,7 +179,7 @@
 				<h4>Non-Fiction Book Club</h4>
 			<p class="location"><a href="#">Collins Branch</a></p>
 			<p class="time">11am-12noon</p>
-			<p>We're reading the <a href="http://library.minlib.net/search~S1?/tLark+and+Termite/tlark+and+termite/1%2C2%2C5%2CB/frameset&FF=tlark+and+termite&1%2C%2C3">Lark and Termite</a> by Jayne Anne Phillips.  Come and join the discussion!</p>
+			<p>We're reading the <a href="http://library.minlib.net/record=b2745704">Lark and Termite</a> by Jayne Anne Phillips.  Come and join the discussion!</p>
 			<p class="contact"><a href="#">Lyndsay Forbes</a>, 617-349-4023</p></div>
 
 
@@ -189,8 +189,8 @@
 			<p class="location"><a href="#">O'Neil Branch</a></p>
 			<p class="time">10:30am-11:00am</p>
 			<p>Monday morning Toddler Time at the O'Neill Branch.  Program is designed for toddlers 0 to 3 years in age and their caregivers.  Come hear stories, sing songs and play games!</p>      
-			<p class="contact"><a href="#">O'Neill Branch</a></br>
-			70 Rindge Avenue</br>
+			<p class="contact"><a href="#">O'Neill Branch</a><br />
+			70 Rindge Avenue<br />
 			617-349-4023</p></div>
 
 
@@ -200,8 +200,8 @@
 			<p class="location"><a href="#">Boudreau Branch</a></p>
 			<p class="time">10:30am-11:00am</p>
 			<p>Storytime for pre-schoolers ages 3 1/2 and older.</p>
-			<p class="contact"><a href="#">Boudreau Branch</a></br>
-			449 Broadway</br>
+			<p class="contact"><a href="#">Boudreau Branch</a><br />
+			449 Broadway<br />
 			617-349-4017</p></div>
 
 
