add fieldset tag to validate against xhtml 1.1

--- a/find/books.html
+++ b/find/books.html
@@ -158,11 +158,13 @@
 		<div id="content">
 		
 <h2>Books &amp; E-Books</h2>
-<form id="catalog">
+<form id="catalog" action="#">
+	<fieldset>
 	<input type="text" size="40" name="item" value="Search the Catalog" />
 	<input type="submit" value="Go" />
+	</fieldset>
 </form>		
-<img class="right" height="173" width="230" alt="CPL Reading Room" src="images/readingroom.jpg">	
+<img class="right" height="173" width="230" alt="CPL Reading Room" src="images/readingroom.jpg" />	
 <h3 class="clear-left">Books</h3>
 Your library card is the key to the resources of Cambridge's Main Library and its six branches. It is also your membership into the <a href="http://library.minlib.net/search/">Minuteman Library Network </a>(MLN). All MLN library members allow you to borrow their materials on your Cambridge library card. The Cambridge Public Library honors all library cards issued by other MLN libraries. 		
 
