make form valid xhtml

--- a/feedback.html
+++ b/feedback.html
@@ -159,17 +159,19 @@
 				<h2>Feedback</h2>
 	<h3>Please give us your name, phone number, and email address so that we can properly respond to your suggestion or comment.</h3>
 	<p class="required">*All Fields Required</p>
-<form>
-<ul>
-	<li>Name:<input type="text" name="yourname" size="40" /></li>
-	<li>Phone Number:<input type="text" name="homeaddress" size="20" /></li>
-	<li>Email Address:<input type="text" name="emailaddress" size="40" /></li>
-	<li>Do you want a response?<br />
-		<input type="radio" name="response" value="yes" /> Yes
-		<input type="radio" name="response" value="no" /> No</li>
-	<li>Suggestion/Comment:<br /><textarea rows="10" cols="60"></textarea></li>
-</ul>
-<input class="right" type="button" value="Submit" />
+<form action="#">
+<fieldset>
+	<ul>
+		<li>Name:<input type="text" name="yourname" size="40" /></li>
+		<li>Phone Number:<input type="text" name="homeaddress" size="20" /></li>
+		<li>Email Address:<input type="text" name="emailaddress" size="40" /></li>
+		<li>Do you want a response?<br />
+			<input type="radio" name="response" value="yes" /> Yes
+			<input type="radio" name="response" value="no" /> No</li>
+		<li>Suggestion/Comment:<br /><textarea rows="10" cols="60"></textarea></li>
+	</ul>
+	<input class="right" type="button" value="Submit" />
+</fieldset>
 </form>
 </div>
 		</div>
