close p tag, remove bom

--- a/how/meetingroom.html
+++ b/how/meetingroom.html
@@ -172,7 +172,7 @@
 			<p>All meeting rooms are subject to availability with the understanding that library programs have priority. If interested in booking a meeting room, please fill out a <a href="http://www.cambridgema.gov/cpl/Services/~/media/Files/cambridgepubliclibrary/eventsandprograms/Meeting%20Room%20Policy%20Main%20Library%20June%2029%20-%20Final%20(2).ashx">meeting room application</a> and submit it to the Main Library no more than two months in advance.You can also fax the application to (617)349-4028.</p>
 			<h3>Branch Libraries</h3>
 			<p><strong>The Central Square Branch</strong> Lewis Room and Rotary Conference Room are not available while the branch is closed. </p>
-			<p><strong>The O'Neill Branch</strong> Meeting Room can be booked for two hours and can accomodate 6 - 8 people maximum. For more information, call (617) 349-4023.	
+			<p><strong>The O'Neill Branch</strong> Meeting Room can be booked for two hours and can accomodate 6 - 8 people maximum. For more information, call (617) 349-4023.</p>
 				
 		</div>
 			<!-- End Content -->
